--- a/public/topbar.html
+++ b/public/topbar.html
@@ -1,6 +1,6 @@
 <!-- *** TOPBAR ***
 _________________________________________________________ -->
-<div id="top" style="backgroud-color:green">
+<div id="top" style="background-color:greenyellow">
     <div class="container">
         <!-- add dummy errors -->
         <!-- end dummy errors -->
